--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
   font-family: 'Noto Sans';
   font-weight: 400;
   font-style: normal;
@@ -52,11 +52,13 @@
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.woff') format('woff'),
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.ttf') format('truetype'),
        url('../fonts/Noto-Sans-700italic/Noto-Sans-700italic.svg#NotoSans') format('svg');
-}
+}*/
 
 body {
+  max-width: 960px;
+  margin: 0 auto;
   background-color: #fff;
-  padding:50px;
+  padding:0 50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
   font-weight:400;
